--- a/6_SECRET_WORD/secret_word/src/components/Game.css
+++ b/6_SECRET_WORD/secret_word/src/components/Game.css
@@ -27,6 +27,7 @@
      text-transform: uppercase;
      background-color: #fff;
      color: #000;
+     font-weight: bold;
 }
 
 .letterContainer p {
