--- a/8_REACT_ROUTER/reactrouter/src/Components/Navbar.css
+++ b/8_REACT_ROUTER/reactrouter/src/Components/Navbar.css
@@ -5,16 +5,16 @@ nav {
 
 nav a {
     margin: 0 10px;
-    padding:  5px;
+    padding: 5px;
     text-decoration: none;
-    color: black;
+    color: #000;
 }
 
 nav a:hover {
-    color: aliceblue;
+    color: #ccc;
 }
 
 .active {
-    background-color: black;
-    color: aliceblue;
+    background-color: #000;
+    color: #fff;
 }
